# myrss

./: .gitignore  Cargo.toml  Dockerfile.auth  Dockerfile.server  Makefile  README.md  deploy.sh  docker-compose.yml  fix-database-url.sh  generate-certs.sh  setup.sh  test-secrets.sh  test_import.rs
myrss-auth/: Cargo.toml
myrss-auth/src/: main.rs
myrss-secrets/: Cargo.toml
myrss-secrets/src/: lib.rs  main.rs
myrss-server/: Cargo.toml  README.md
myrss-server/migrations/: 001_initial_schema.sql  20240104000001_add_user_password.sql  20240104000002_add_labels.sql  20240104000003_add_user_read_items.sql
myrss-server/src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  rss_fetcher.rs  templates.rs
myrss-server/static/: app.js  style.css
nginx/: nginx.conf
