[workspace]
members = [
    "myrss-secrets",
    "myrss-server",
    "myrss-auth",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
actix-web = "4.9"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
maud = { version = "0.26", features = ["actix-web"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
rss = "2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
env_logger = "0.11"
log = "0.4"
config = "0.14"