[package]
name = "myrss-secrets"
version = "0.1.0"
edition = "2021"

[lib]
name = "myrss_secrets"
path = "src/lib.rs"

[[bin]]
name = "myrss-secrets"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
directories = "5.0"
sha2 = { workspace = true }