[package]
name = "myrss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
maud = { version = "0.26", features = ["actix-web"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
rss = "2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
myrss-secrets = { path = "../myrss-secrets" }
env_logger = "0.11"
log = "0.4"
config = "0.14"